fix some bugs after test the project
