# Internal/dto/update_memper_role.go
@@ -2,6 +2,6 @@ package dto
 
 type UpdateMemberRoleDto struct {
 	UserID  int64  `json:"user_id" binding:"required"`
-	Role    string `json:"role" binding:"required"`
+	Role    string `json:"role" binding:"required,oneof=Admin Member Viewer"`
 	Version int64  `json:"version" binding:"required"`
 }
