# Internal/route/account_route.go
@@ -14,5 +14,5 @@ func LoginUserRoutes(r *gin.Engine, userHandler *handler.UserHandler) {
 	r.POST("/login", userHandler.Login)
 }
 func RefreshTokenRoute(r *gin.Engine, userHandler *handler.UserHandler) {
-	r.POST("/refreshToken/:token", userHandler.RefreshToken)
+	r.POST("/refreshToken", userHandler.RefreshToken)
 }
